- Добавлены новые команды - Добавлен сервис для исполнения команд в консоли

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,17 @@
 telegram:
-  apiUrl: https://api.telegram.org/
+  apiUrl: https://api.telegram.org/bot
   webhookPath:
   botName:
   botToken:
 
+shell:
+  dir:
+
 server:
   port: 8080
+
+logging:
+  level:
+    linux:
+      commands:
+        execution: DEBUG
