--- a/deploy/caddy_manifest.yaml
+++ b/deploy/caddy_manifest.yaml
@@ -48,6 +48,13 @@ spec:
           volumeMounts:
             - name: caddy-conf
               mountPath: /etc/caddy
+          resources:
+            requests:
+              memory: "0.5Gi"
+              cpu: "200m"
+            limits:
+              memory: "0.5Gi"
+              cpu: "200m"
 
       volumes:
         - name: caddy-conf
