--- a/deploy/bot_manifest.yaml
+++ b/deploy/bot_manifest.yaml
@@ -26,12 +26,22 @@ spec:
     spec:
       containers:
         - name: lceng-bot
-          image: w4maw/lceng_bot:0.21
+          image: w4maw/lceng_bot:0.22
           ports:
             - containerPort: 8080
           volumeMounts:
             - name: bot-conf
               mountPath: /app/config
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 3
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
           resources:
             requests:
               memory: "1Gi"
