--- a/deploy/bot_manifest.yaml
+++ b/deploy/bot_manifest.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: lceng-bot
-          image: w4maw/lceng_bot:0.22
+          image: w4maw/lceng_bot:0.23
           ports:
             - containerPort: 8080
           volumeMounts:
@@ -34,13 +34,13 @@ spec:
               mountPath: /app/config
           livenessProbe:
             httpGet:
-              path: /actuator/health/liveness
+              path: /actuator/health
               port: 8080
             initialDelaySeconds: 3
             periodSeconds: 3
           readinessProbe:
             httpGet:
-              path: /actuator/health/readiness
+              path: /actuator/health
               port: 8080
           resources:
             requests:
