- Убран хост из манифеста

--- a/deploy/caddy_manifest.yaml
+++ b/deploy/caddy_manifest.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: route-edge-secured
 spec:
-  host: lceng.apps.okd.sbc-openshift.ru
+  host:
   to:
     kind: Service
     name: caddy-service
